name:                rtorrent-rpc
version:             0.3.0.0
synopsis:            A library for communicating with RTorrent over its JSON-RPC interface.
description:         
    A library for communicating with RTorrent over its JSON-RPC interface.
license:             MIT
license-file:        LICENSE
author:              Kai Lindholm
maintainer:          megantti@gmail.com
homepage:            https://github.com/megantti/rtorrent-rpc
copyright:           (c) Kai Lindholm, 2014-2015, 2025
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.RTorrent
                       Network.RTorrent.Action
                       Network.RTorrent.Action.Internals
                       Network.RTorrent.Chunk
                       Network.RTorrent.Command
                       Network.RTorrent.Command.Internals
                       Network.RTorrent.CommandList 
                       Network.RTorrent.File
                       Network.RTorrent.JSONRPC
                       Network.RTorrent.Peer 
                       Network.RTorrent.Priority
                       Network.RTorrent.Query
                       Network.RTorrent.RPC
                       Network.RTorrent.Torrent
                       Network.RTorrent.Tracker
                       Network.RTorrent.Value
  other-extensions:    TypeFamilies, OverloadedStrings, TypeOperators, ScopedTypeVariables, 
                       GADTs, FlexibleContexts, RankNTypes
  build-depends:       attoparsec,
                       aeson,
                       aeson-pretty,
                       base,
                       base64-bytestring,
                       blaze-builder,
                       blaze-textual,
                       bytestring,
                       containers,
                       deepseq,
                       directory,
                       mtl,
                       network,
                       network-uri,
                       scientific,
                       text,
                       vector,
                       vector-split

  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -O2
