name:                rtorrent-rpc
version:             0.3.0.0
synopsis:            A library for communicating with RTorrent over its JSON-RPC interface.
description:         
    A library for communicating with RTorrent over its JSON-RPC interface.
license:             MIT
license-file:        LICENSE
author:              Kai Lindholm
maintainer:          megantti@gmail.com
homepage:            https://github.com/megantti/rtorrent-rpc
copyright:           (c) Kai Lindholm, 2014-2015, 2025
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.RTorrent
                       Network.RTorrent.Action
                       Network.RTorrent.Action.Internals
                       Network.RTorrent.Chunk
                       Network.RTorrent.Command
                       Network.RTorrent.Command.Internals
                       Network.RTorrent.CommandList 
                       Network.RTorrent.File
                       Network.RTorrent.JSONRPC
                       Network.RTorrent.Peer 
                       Network.RTorrent.Priority
                       Network.RTorrent.Query
                       Network.RTorrent.RPC
                       Network.RTorrent.Torrent
                       Network.RTorrent.Tracker
                       Network.RTorrent.Value
  other-extensions:    TypeFamilies, OverloadedStrings, TypeOperators, ScopedTypeVariables, 
                       GADTs, FlexibleContexts, RankNTypes
  build-depends:       aeson >= 2.2.3 && < 2.3,
                       aeson-pretty >= 0.8.10 && < 0.9,
                       attoparsec >= 0.14.4 && < 0.15,
                       base >= 4.16 && < 4.22,
                       base64-bytestring >= 1.2.1 && < 1.3,
                       blaze-builder >= 0.4.4 && < 0.5,
                       blaze-textual >= 0.2.3 && < 0.3,
                       bytestring >= 0.11.4 && < 0.13,
                       containers >= 0.6.5 && < 0.8,
                       directory >= 1.3.6 && < 1.4,
                       mtl >= 2.2.2 && < 2.4,
                       network >= 3.2.7 && < 3.3,
                       network-uri >= 2.6.4 && < 2.7,
                       scientific >= 0.3.8 && < 0.4,
                       text >= 1.2.5 && < 2.2,
                       vector >= 0.13.2 && < 0.14,
                       vector-split >= 1.0.0 && < 1.1

  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -O2
